@@ -1,11 +1,13 @@
 package school.faang.user_service.service.user;
 
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.Synchronized;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import school.faang.user_service.dto.user.UserDto;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.exception.ErrorMessage;
@@ -13,10 +15,6 @@ import school.faang.user_service.exception.UserNotFoundException;
 import school.faang.user_service.exception.UserSaveException;
 import school.faang.user_service.mapper.user.UserMapper;
 import school.faang.user_service.repository.UserRepository;
-
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -76,10 +74,16 @@ public class UserService {
                 .map(User::getId)
                 .toList();
 
-        return userIds.stream()
-                .filter(id -> !existingUserIds.contains(id))
-                .collect(Collectors.toList());
-    }
+    return userIds.stream()
+        .filter(id -> !existingUserIds.contains(id))
+        .collect(Collectors.toList());
+  }
+
+  public List<UserDto> getUserSubscribers(long userId) {
+    return userRepository.findUserSubsribers(userId).stream()
+        .map(userMapper::toDto)
+        .toList();
+  }
 
     @Async("worker-pool")
     @Synchronized
